--- a/ZSMDP/bin/view/login.fxml
+++ b/ZSMDP/bin/view/login.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -12,8 +10,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LoginController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="571.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -39,37 +38,29 @@
    <children>
       <AnchorPane prefHeight="302.0" prefWidth="534.0" style="-fx-background-color: ffffff;" GridPane.columnSpan="6" GridPane.rowIndex="1" GridPane.rowSpan="11">
          <children>
-            <Label alignment="CENTER" layoutX="219.0" layoutY="8.0" prefHeight="44.0" prefWidth="430.0" style="-fx-background-color: #90512c;" text="-PRIJAVA KORISNIKA-">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Label>
-            <TextField fx:id="userNameTextField" layoutX="521.0" layoutY="203.0" prefHeight="44.0" prefWidth="202.0" promptText="Korisničko ime" style="-fx-background-color: #cd743f;">
-               <cursor>
-                  <Cursor fx:constant="WAIT" />
-               </cursor>
-               <font>
-                  <Font size="18.0" />
-               </font></TextField>
-            <Button fx:id="loginButton" layoutX="525.0" layoutY="353.0" mnemonicParsing="false" onAction="#login" prefHeight="44.0" prefWidth="193.0" style="-fx-background-color: cdaf3f;" text="Prijava">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font></Button>
-            <PasswordField fx:id="passwordTextField" layoutX="521.0" layoutY="279.0" prefHeight="44.0" prefWidth="202.0" promptText="Lozinka" style="-fx-background-color: #cd743f;">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </PasswordField>
-            <ImageView fitHeight="522.0" fitWidth="526.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="600.0" fitWidth="600.0" layoutX="-1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../images/triangle.png" />
+                  <Image url="@../../images/login.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="179.0" fitWidth="257.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="158.0" fitWidth="217.0" layoutX="5.0" layoutY="206.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/train.jpg" />
                </image>
             </ImageView>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="222.0" layoutY="45.0" prefHeight="81.0" prefWidth="168.0" text="PRIJAVA" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <TextField fx:id="userNameTextField" layoutX="362.0" layoutY="343.0" prefHeight="26.0" prefWidth="168.0" promptText="Korisničko ime" style="-fx-background-color: ffffff;" />
+            <Text layoutX="386.0" layoutY="505.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prijavi se" wrappingWidth="125.33673095703125">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <PasswordField fx:id="passwordTextField" layoutX="362.0" layoutY="411.0" promptText="Lozinka" style="-fx-background-color: ffffff;" />
+            <ImageView fitHeight="42.0" fitWidth="197.0" layoutX="350.0" layoutY="479.0" onMouseClicked="#login" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
    </children>
