--- a/ZSMDP/src/view/zsmdp.fxml
+++ b/ZSMDP/src/view/zsmdp.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -11,9 +12,8 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -56,7 +56,7 @@
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: cd743f;" GridPane.columnSpan="23" GridPane.rowSpan="11">
          <children>
             <VBox layoutX="33.0" layoutY="119.0" prefHeight="54.0" prefWidth="58.0" />
-            <VBox layoutX="14.0" layoutY="190.0" prefHeight="54.0" prefWidth="58.0">
+            <VBox layoutX="14.0" layoutY="105.0" prefHeight="54.0" prefWidth="58.0">
                <children>
                   <AnchorPane prefHeight="446.0" prefWidth="385.0">
                      <children>
@@ -75,7 +75,7 @@
                               <Image url="@../../images/add.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="54.0" fitWidth="58.0" layoutX="61.0" layoutY="214.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="54.0" fitWidth="58.0" layoutX="61.0" layoutY="214.0" onMouseClicked="#sendNotification" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../images/notice.png" />
                            </image>
@@ -99,47 +99,43 @@
                   </AnchorPane>
                </children>
             </VBox>
-            <VBox layoutX="33.0" layoutY="277.0" prefHeight="54.0" prefWidth="58.0" />
-            <ImageView fitHeight="190.0" fitWidth="340.0" layoutX="306.0" pickOnBounds="true">
-               <image>
-                  <Image url="@../../images/template2.png" />
-               </image>
-            </ImageView>
-            <Label alignment="CENTER" layoutX="416.0" layoutY="59.0" prefHeight="35.0" prefWidth="138.0" text="-ZSMDP-" textAlignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="54.0" fitWidth="58.0" layoutX="80.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="54.0" fitWidth="58.0" layoutX="75.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/user.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="170.0" fitWidth="158.0" layoutX="134.0" layoutY="67.0" pickOnBounds="true">
+            <ImageView fitHeight="161.0" fitWidth="158.0" layoutX="129.0" layoutY="-12.0" pickOnBounds="true">
                <image>
                   <Image url="@../../images/template3.png" />
                </image>
             </ImageView>
-            <Label fx:id="userLabel" layoutX="165.0" layoutY="130.0" prefHeight="26.0" prefWidth="82.0" text="label" />
-            <ComboBox fx:id="locationComboBox" editable="true" layoutX="508.0" layoutY="190.0" onAction="#initializeUserComboBox" prefWidth="150.0" promptText="Izaberi lokaciju" style="-fx-background-color: #cd853f;" />
-            <ComboBox fx:id="userComboBox" editable="true" layoutX="670.0" layoutY="190.0" onAction="#selectUser" prefWidth="150.0" promptText="Izaberi korisnika" />
-            <ImageView fitHeight="395.0" fitWidth="402.0" layoutX="458.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true">
+            <Label fx:id="userLabel" layoutX="158.0" layoutY="46.0" prefHeight="26.0" prefWidth="82.0" text="label" />
+            <ComboBox fx:id="locationComboBox" editable="true" layoutX="498.0" layoutY="106.0" onAction="#initializeUserComboBox" prefWidth="150.0" promptText="Izaberi lokaciju" style="-fx-background-color: #cd853f;" />
+            <ComboBox fx:id="userComboBox" editable="true" layoutX="663.0" layoutY="106.0" onAction="#selectUser" prefWidth="150.0" promptText="Izaberi korisnika" />
+            <ImageView fitHeight="395.0" fitWidth="402.0" layoutX="458.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/template4.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="35.0" fitWidth="26.0" layoutX="763.0" layoutY="568.0" onMouseClicked="#sendMessage" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="35.0" fitWidth="26.0" layoutX="757.0" layoutY="487.0" onMouseClicked="#sendMessage" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/send.png" />
                </image>
             </ImageView>
-            <TextField fx:id="NewMessageTextField" layoutX="539.0" layoutY="568.0" prefHeight="26.0" prefWidth="158.0" promptText="Unesite poruku..." style="-fx-background-color: #f2db90;" />
-            <TextArea fx:id="messageTextArea" layoutX="542.0" layoutY="280.0" prefHeight="257.0" prefWidth="234.0" />
-            <ImageView fx:id="addFileImageView" fitHeight="26.0" fitWidth="39.0" layoutX="712.0" layoutY="568.0" onMouseClicked="#chooseFile" pickOnBounds="true" preserveRatio="true">
+            <TextField fx:id="NewMessageTextField" layoutX="542.0" layoutY="487.0" prefHeight="26.0" prefWidth="158.0" promptText="Unesite poruku..." style="-fx-background-color: #f2db90;" />
+            <TextArea fx:id="messageTextArea" layoutX="542.0" layoutY="196.0" prefHeight="257.0" prefWidth="234.0" />
+            <ImageView fx:id="addFileImageView" fitHeight="26.0" fitWidth="39.0" layoutX="712.0" layoutY="487.0" onMouseClicked="#chooseFile" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/paperclip.png" />
                </image>
             </ImageView>
+            <ImageView fitHeight="251.0" fitWidth="508.0" layoutX="182.0" layoutY="542.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/template5.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="422.0" layoutY="578.0" text="NOTIFIKACIJE" />
+            <ScrollPane fx:id="scrollPane" layoutX="238.0" layoutY="596.0" prefHeight="143.0" prefWidth="418.0" />
          </children>
       </AnchorPane>
    </children>
